--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.3.2",
     "mongoose": "^8.2.4"
   },
   "devDependencies": {
